--- a/DigimonWorldTools_WindowsForms/DigimonWorldTools_WindowsForms.csproj
+++ b/DigimonWorldTools_WindowsForms/DigimonWorldTools_WindowsForms.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EvolutionTool\DigimonCombatStats.cs" />
     <Compile Include="EvolutionTool\DigimonStats.cs" />
     <Compile Include="EvolutionTool\EvolutionCriteria\EvolutionCriteriaAgumon.cs" />
     <Compile Include="EvolutionTool\EvolutionCriteria\EvolutionCriteriaGabumon.cs" />
