--- a/EvolutionToolTests/DigimonWorldTools_Tests.csproj
+++ b/EvolutionToolTests/DigimonWorldTools_Tests.csproj
@@ -10,8 +10,8 @@
     <ProjectGuid>{7E27FB26-993D-44EB-8554-CEF5F9ABE3EE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EvolutionToolTests</RootNamespace>
-    <AssemblyName>EvolutionToolTests</AssemblyName>
+    <RootNamespace>EvoToolTests</RootNamespace>
+    <AssemblyName>EvoToolTests</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
