Moved the bonus criteria determination logic to a compound method in the EvoToolbox to create a new layer. Applied some minor fixes but the logic is currently not working. I commit this now so I can fix this later.

--- a/DigimonWorldTools_WindowsForms/DigimonWorldTools_WindowsForms.csproj
+++ b/DigimonWorldTools_WindowsForms/DigimonWorldTools_WindowsForms.csproj
@@ -81,6 +81,7 @@
     <Compile Include="EvolutionTool\Common\Factories\EvoTargetsListFactory.cs" />
     <Compile Include="EvolutionTool\Common\MessageboxTextMessages\MessageBoxWarningTextMessages.cs" />
     <Compile Include="EvolutionTool\Common\Stats\CombatStat.cs" />
+    <Compile Include="EvolutionTool\EvoToolbox.cs" />
     <Compile Include="EvolutionTool\UserDigimonDataObject.cs" />
     <Compile Include="EvolutionTool\EvoCriteria\Champion\EvoCriteriaBirdramon.cs" />
     <Compile Include="EvolutionTool\EvoCriteria\Champion\EvoCriteriaGreymon.cs" />
