Moved classes to the EvolutionTool.EvoDetermination namespace to improve orderly structure and shorten the names.
EvoCrtieriaMain and EvoCriteriaBonus have been created and implemented to create another layer. I chose this setup because it provides a common class for both main as bonus criteria while providing a read only main/bonus criteria object on the evolution criteria.
I think this setup will work really well if I create a reader or a property file setup for the evo criteria.

Next to that a compound tool method has been moved to the EvoToolbox to reduce the responsibilities of the Determinator.

--- a/DigimonWorldTools_WindowsForms/DigimonWorldTools_WindowsForms.csproj
+++ b/DigimonWorldTools_WindowsForms/DigimonWorldTools_WindowsForms.csproj
@@ -56,11 +56,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EvolutionTool\Common\EvoCriteria\EvoCriteriaBonus.cs" />
     <Compile Include="EvolutionTool\Common\EvoCriteria\EvoCriteriaBattles.cs" />
     <Compile Include="EvolutionTool\Common\EvoCriteria\EvoCriteriaCareMistakes.cs" />
     <Compile Include="EvolutionTool\Common\EvoCriteria\EvoCriteriaCombatStats.cs" />
     <Compile Include="EvolutionTool\Common\EvoCriteria\EvoCriteriaDiscipline.cs" />
     <Compile Include="EvolutionTool\Common\EvoCriteria\EvoCriteriaHappiness.cs" />
+    <Compile Include="EvolutionTool\Common\EvoCriteria\EvoCriteriaMain.cs" />
     <Compile Include="EvolutionTool\Common\EvoCriteria\EvoCriteriaTech.cs" />
     <Compile Include="EvolutionTool\Common\EvoCriteria\EvoCriteriaWeight.cs" />
     <Compile Include="EvolutionTool\Common\Stats\CombatStats.cs" />
@@ -73,21 +75,21 @@
     <Compile Include="EvolutionTool\EvoCriteria\Champion\EvoCriteriaTyrannomon.cs" />
     <Compile Include="EvolutionTool\EvoCriteria\Champion\EvoCriteriaCentarumon.cs" />
     <Compile Include="EvolutionTool\EvoCriteria\Champion\EvoCriteriaMonochromon.cs" />
-    <Compile Include="EvolutionTool\EvoParamsChampionAndUltimate.cs" />
-    <Compile Include="EvolutionTool\EvoParamsRookie.cs" />
+    <Compile Include="EvolutionTool\EvoDetermination\ParamsChampionAndUltimate.cs" />
+    <Compile Include="EvolutionTool\EvoDetermination\ParamsRookie.cs" />
     <Compile Include="EvolutionTool\Common\Factories\DictionaryFactory.cs" />
     <Compile Include="EvolutionTool\Common\Toolbox\EvoStatsToolbox.cs" />
     <Compile Include="EvolutionTool\Common\Digimon\EvoStage.cs" />
     <Compile Include="EvolutionTool\Common\Factories\EvoTargetsListFactory.cs" />
     <Compile Include="EvolutionTool\Common\MessageboxTextMessages\MessageBoxWarningTextMessages.cs" />
     <Compile Include="EvolutionTool\Common\Stats\CombatStat.cs" />
-    <Compile Include="EvolutionTool\EvoToolbox.cs" />
+    <Compile Include="EvolutionTool\EvoDetermination\Toolbox.cs" />
     <Compile Include="EvolutionTool\UserDigimonDataObject.cs" />
     <Compile Include="EvolutionTool\EvoCriteria\Champion\EvoCriteriaBirdramon.cs" />
     <Compile Include="EvolutionTool\EvoCriteria\Champion\EvoCriteriaGreymon.cs" />
     <Compile Include="EvolutionTool\EvoCriteria\IEvoCriteriaDigimon.cs" />
-    <Compile Include="EvolutionTool\EvoDeterminationFlow.cs" />
-    <Compile Include="EvolutionTool\EvoDeterminator.cs" />
+    <Compile Include="EvolutionTool\EvoDetermination\DeterminationFlow.cs" />
+    <Compile Include="EvolutionTool\EvoDetermination\Determinator.cs" />
     <Compile Include="EvolutionTool\Common\Factories\ReadOnlyDictionaryFactory.cs" />
     <Compile Include="EvolutionTool\Common\Digimon\DigimonType.cs" />
     <Compile Include="EvolutionTool\Common\Stats\StatNames.cs" />
