Simplified names because the namespace determines the scope of the class.
Added null checks so that stacktraces are more meaning full.

--- a/DigimonWorldTools_WindowsForms/DigimonWorldTools_WindowsForms.csproj
+++ b/DigimonWorldTools_WindowsForms/DigimonWorldTools_WindowsForms.csproj
@@ -70,23 +70,23 @@
     <Compile Include="EvolutionTool\EvoCriteria\IMinCriteria.cs" />
     <Compile Include="EvolutionTool\EvoCriteria\IMinMaxCritieria.cs" />
     <Compile Include="EvolutionTool\EvoCriteria\IStatRangeCriteria.cs" />
-    <Compile Include="EvolutionTool\EvoCriteria\Rookie\EvoCriteriaAgumon.cs" />
-    <Compile Include="EvolutionTool\EvoCriteria\Rookie\EvoCriteriaGabumon.cs" />
-    <Compile Include="EvolutionTool\EvoCriteria\Champion\EvoCriteriaTyrannomon.cs" />
-    <Compile Include="EvolutionTool\EvoCriteria\Champion\EvoCriteriaCentarumon.cs" />
-    <Compile Include="EvolutionTool\EvoCriteria\Champion\EvoCriteriaMonochromon.cs" />
+    <Compile Include="EvolutionTool\EvoCriteria\Rookie\Agumon.cs" />
+    <Compile Include="EvolutionTool\EvoCriteria\Rookie\Gabumon.cs" />
+    <Compile Include="EvolutionTool\EvoCriteria\Champion\Tyrannomon.cs" />
+    <Compile Include="EvolutionTool\EvoCriteria\Champion\Centarumon.cs" />
+    <Compile Include="EvolutionTool\EvoCriteria\Champion\Monochromon.cs" />
     <Compile Include="EvolutionTool\EvoDetermination\ParamsChampionAndUltimate.cs" />
     <Compile Include="EvolutionTool\EvoDetermination\ParamsRookie.cs" />
     <Compile Include="EvolutionTool\Common\Factories\DictionaryFactory.cs" />
     <Compile Include="EvolutionTool\Common\Toolbox\EvoStatsToolbox.cs" />
     <Compile Include="EvolutionTool\Common\Digimon\EvoStage.cs" />
     <Compile Include="EvolutionTool\Common\Factories\EvoTargetsListFactory.cs" />
-    <Compile Include="EvolutionTool\Common\MessageboxTextMessages\MessageBoxWarningTextMessages.cs" />
+    <Compile Include="EvolutionTool\Common\MessageboxTextMessages\Warnings.cs" />
     <Compile Include="EvolutionTool\Common\Stats\CombatStat.cs" />
     <Compile Include="EvolutionTool\EvoDetermination\Toolbox.cs" />
     <Compile Include="EvolutionTool\UserDigimonDataObject.cs" />
-    <Compile Include="EvolutionTool\EvoCriteria\Champion\EvoCriteriaBirdramon.cs" />
-    <Compile Include="EvolutionTool\EvoCriteria\Champion\EvoCriteriaGreymon.cs" />
+    <Compile Include="EvolutionTool\EvoCriteria\Champion\Birdramon.cs" />
+    <Compile Include="EvolutionTool\EvoCriteria\Champion\Greymon.cs" />
     <Compile Include="EvolutionTool\EvoCriteria\IEvoCriteriaDigimon.cs" />
     <Compile Include="EvolutionTool\EvoDetermination\DeterminationFlow.cs" />
     <Compile Include="EvolutionTool\EvoDetermination\Determinator.cs" />
